basic styles for main section ready. fixing spacing and margins between divs is pending

--- a/css/header.css
+++ b/css/header.css
@@ -63,7 +63,7 @@
      margin: 25px 0;
      font-size: 12px;
      font-weight: 600;
-     padding: 11px 45px;
+     padding: 10px 40px;
      border: none;
      background: var(--primary-pink);
      color: var(--neutral-pale-blue);
