--- a/css/section_main.css
+++ b/css/section_main.css
@@ -50,6 +50,5 @@
 }
 
 .subtitle {
-    /* font-family: var(--font-poppins); */
-    font-weight: ;
+    margin: 100px 0 40px 0;
 }
